index.css
html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: inherit;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}

.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  padding: 1.25rem;
}

.main > * + * {
  margin-top: 6.25rem;
}

.controls {
  display: flex;
  flex-direction: column;
}

.controls > * + * {
  margin-top: 0.625rem;
}

.label {
  display: flex;
  align-items: center;
}

.label > *:first-child {
  margin-right: 1.25rem;
}

.input {
  width: 2.875rem;
  padding: 0.125rem 0.25rem;
  border: 1px solid black;
  border-radius: 2rem;
  font: inherit;
  text-align: center;
  -moz-appearance: textfield;
}

.input::-webkit-outer-spin-button,
.input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.input:invalid {
  border-color: red;
  outline-color: red;
}

.switch {
  display: inline-block;
  padding: 0.125rem;
  -webkit-appearance: none;
  appearance: none;
  width: 2.875rem;
  height: 1.75rem;
  border-radius: 2rem;
  background: lightgray;
  transition: all 0.4s;
}

.switch::before {
  content: "";
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  background: white;
  transition: all 0.4s;
}

.switch:checked {
  background: blue;
}

.switch:checked:before {
  transform: translate(1.125rem);
}

@media (orientation: landscape) {
  .main {
    flex-direction: row;
  }

  .main > * + * {
    margin-top: 0;
    margin-left: 6.25rem;
  }
}

